Fix customer service button, fix for only home page on mobile

--- a/src/component/HeaderTopBar/HeaderTopBar.style.scss
+++ b/src/component/HeaderTopBar/HeaderTopBar.style.scss
@@ -22,6 +22,7 @@
     }
 
     &-CmsBlock {
+        display: none;
         font-size: 12px;
         font-weight: 600;
         letter-spacing: 0.5px;
@@ -30,8 +31,12 @@
         margin-bottom: 7px;
         text-transform: uppercase;
 
-        @media (max-width: 1024px) {
-            display: none;
+        @include desktop {
+            display: block;
         }
+    }
+
+    &_isOnMobile {
+        display: none;
     }
 }
